Tue Mar  2 23:40:42 UTC 2004  Don Hinton  <dhinton@dre.vanderbilt.edu>

        * bin/create_ace_build.pl:
          Don't remove files with the .exp extention from the list
          of files used to create a workspace since they are used
          by the gperf tests and will break autobuilds that use
          this script.

Tue Mar  2 23:26:28 UTC 2004  Don Hinton  <dhinton@dre.vanderbilt.edu>

        * bin/g++dep:
          Added the -MG option so that missing dependency files won't
          cause g++ to stop processing.  Thanks for Steve Huston for
          pointing this out.

          Modified the sed script that modifies the output to correctly
          blow away only the platform specific config file.  This was
          needed since we now have config-all.h and config-lite.h.  Thanks
          to Bala for pointing out the problem.

        * ace/Makefile.ace:
        * ace/RMCast/Makefile:
          Updated dependencies.

Tue Mar  2 23:12:17 UTC 2004  Don Hinton  <dhinton@dre.vanderbilt.edu>

        * tests/Dirent_Test.cpp:
          Fixed the CVS Id tag.

Tue Mar  2 22:58:40 UTC 2004  Don Hinton  <dhinton@dre.vanderbilt.edu>

        * bin/MakeProjectCreator/modules/WorkspaceCreator.pm:
          Rewrote the output generation to be more human readable
          by using standard makefile techniques.  Also, discovered
          a bug in the dependencies (that was also present prior
          to this change) since it's now easier to grok the
          generated makefile.  I'll fix it once I've checked in
          all the other MPC changes in my queue. 

Tue Mar  2 12:28:09 2004  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/templates/bmake.mpd:
        * bin/MakeProjectCreator/templates/bmakedllexe.mpt:
        * bin/MakeProjectCreator/templates/bmakelibexe.mpt:
        * bin/MakeProjectCreator/templates/em3vcp.mpd:
        * bin/MakeProjectCreator/templates/em3vcpdllexe.mpt: