@@ -11,11 +11,12 @@
 // ============================================================================
 
 #include "../test_config.h"
+#include "ace/OS_NS_string.h"
+#include "ace/OS_NS_time.h"
 #include "ace/ACE.h"
 #include "ace/Message_Block.h"
 #include "ace/Task.h"
 #include "ace/RMCast/RMCast_Fragment.h"
-#include "ace/OS_NS_time.h"
 
 ACE_RCSID(tests, RMCast_Fragment_Test, "$Id$")
 
