@@ -1,11 +1,12 @@
 // $Id$
 
 #include "../test_config.h"
+#include "ace/OS_NS_time.h"
+#include "ace/ACE.h"
+#include "ace/Task.h"
+
 #include "ace/RMCast/RMCast_Proxy.h"
 #include "ace/RMCast/RMCast_Retransmission.h"
-#include "ace/OS_NS_time.h"
-
-#include "ace/Task.h"
 
 ACE_RCSID(tests, RMCast_Retransmission_Test, "$Id$")
 
