@@ -1,3 +1,13 @@
+Tue Mar  2 18:46:11 2004  Steve Huston  <shuston@riverace.com>
+
+	* tests/SSL/Thread_Pool_Reactor_SSL_Test.cpp:
+	* tests/RMCast/RMCast_Fragment_Test.cpp:
+	* tests/RMCast/RMCast_Reassembly_Test.cpp: Added #include
+	  "ace/OS_NS_string.h" to get missing ACE_OS methods on AIX.
+
+	* tests/RMCast/RMCast_Retransmission_Test.cpp: Added #include
+	  "ace/ACE.h" to get missing methods on AIX.
+
 Tue Mar  2 23:40:42 UTC 2004  Don Hinton  <dhinton@dre.vanderbilt.edu>
 
         * bin/create_ace_build.pl:
